2008-12-10 Alexander Malysh <amalysh at kannel.org>
(CB)* doc/userguide/userguide.xml, gw/bb_alog.c, gw/dlr.[ch], gw/msg-decl.h, gw/urltrans.c:
      applied patch that adds foreign (SMSC) ID to message. This patch breaks access log
      format and extends Msg struct.
      Thanks to Alejandro Guerrieri <aguerrieri at kannel.org> for this patch.

2008-12-10 Alexander Malysh <amalysh at kannel.org>
    * gw/wap_push_ppg.c, gw/wapbox.c: fixed memory leaks.

2008-12-10 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_alog.c: fixed memory leak. Thanks to Nikos Balkanas for test case.

2008-11-25 Alexander Malysh <amalysh at kannel.org>
    * gw/smsbox.c: escape string values in the XML document for MO messages.
      Thanks to Michael Zervakis <michael at zervakis.com> for pointing to this issue.

2008-11-19 Alexander Malysh <amalysh at kannel.org>
    * gwlib/log.c: fixed double close/free in log_close_all().
      Thanks to Werner Coetzee <werner.coetzee at clickatell.com> for pointing
      to the issue.

2008-11-19 Alexander Malysh <amalysh at kannel.org>
    * debian/kannel.init: apllied patch that replace usage of run_kannel_box
      with kannel oprions --daemonize.
      Thanks to Alan McNatty <alan at catalyst.net.nz> for this patch.
      [Msg-ID: <4922140B.3000803@catalyst.net.nz>]

2008-11-17 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: wait OK after issuing AT+CNMA-command.
      Thanks to matti.armanen at sci.fi for the patch.
      [Msg-ID: 491E905E.908@sci.fi]

2008-10-22  Stipe Tolj  <stolj at kannel.org>
    * test/test_ota.c: write the binary ota_compile() output block to a file
      cleanly.
       
2008-10-22  Stipe Tolj  <stolj at kannel.org>
    * gw/ota_compiler.c: re-order INLINE attributs in oma_ota_attributes struct
      to fit the order in the spec tables. NLC.

2008-10-21  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: fix possible segfaults in handle_pdu(), where we 